Avoid overflow of YouTube iframe on mobile devices

--- a/source/stylesheets/_application.css.scss
+++ b/source/stylesheets/_application.css.scss
@@ -31,4 +31,8 @@ iframe.centered {
   body {
     word-wrap: break-word;
   }
+
+  .youtube {
+    width: 100%;
+  }
 }
